feat: implement authorize token for metrics endpoint
feat: implement authorize token for metrics endpoint, so those who have the token and matched, can access the route
feat: implement viper to read config files
refactor: function => variable on asmaul husna data
chore: generate newest swagger docs
