# cmd/app/development/main.go
@@ -2,7 +2,6 @@ package main
 
 import (
 	"asmaul-husna/pkg/configs"
-	"asmaul-husna/pkg/middleware"
 	"asmaul-husna/pkg/server"
 	"context"
 	"log"
@@ -12,8 +11,6 @@ import (
 	"time"
 
 	"github.com/gofiber/contrib/swagger"
-	"github.com/gofiber/fiber/v2/middleware/adaptor"
-	"github.com/prometheus/client_golang/prometheus/promhttp"
 )
 
 // @title Asmaul Husna API
@@ -29,12 +26,14 @@ import (
 // @contact.url http://www.swagger.io/support
 // @contact.email support@swagger.io
 // @license.url http://www.apache.org/licenses/LICENSE-2.0.html
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
+// @description Enter the token with the `Bearer ` prefix."
 func main() {
 	server := server.New()
 	server.RegisterFiberRoutes()
 
-	server.Use(middleware.PrometheusMiddleware())
-	server.Use("/metrics", adaptor.HTTPHandler(promhttp.Handler()))
 	server.Use(swagger.New(configs.SwgCfg))
 
 	quit := make(chan os.Signal, 1)
